--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
             <div id="wrong">
                 Try again
             </div>
+            <div id="question">
+
+            </div>
+            <div id="instruction">
+
+            </div>
+            <div id="choices">
+                <div id="box1" class="box"></div>
+                <div id="box2" class="box"></div>
+                <div id="box3" class="box"></div>
+                <div id="box4" class="box"></div>
+            </div>
+            <div id="startreset">
+                Start Game
+            </div>
+            <div id="timeremainig">
+                Time remaining: <span id="timeremainingvalue">60</span> sec
+            </div>
 
         </div>
 
